# Hiflow3_2.0

./: .directory  .gitignore  AUTHORS  CMakeLists.txt  COPYING.EUPL.DE  CTestConfig.cmake  README.md  ReleaseNotes.txt
doc/: CMakeLists.txt  Doxyfile.in  INSTALLATION
doc/ExternalPackages/: ReadMe_PETSc  ReadMe_SLEPc
doc/concepts/: assembly.dox  degree_of_freedom.dox  getting_started.dox  main_page.dox.in  mesh.dox
examples/: .directory  CMakeLists.txt
examples/assembly/: HiFlowFiles.cmake  assembly_demo.cc
examples/benchmark_local_solver/: HiFlowFiles.cmake  benchmark_local_solver.cc
examples/benchmarks/: HiFlowFiles.cmake  assembly_bench.cc  assembly_bench.h  uniform_refinement_perf_test.cc
examples/blood_flow/: HiFlowFiles.cmake  blood_flow_tutorial.cc  blood_flow_tutorial.h  blood_flow_tutorial_aorta.xml  blood_flow_tutorial_channel.xml
examples/convection_diffusion/: HiFlowFiles.cmake  Makefile  convdiff.cc  convdiff.h  convdiff.xml  convdiff_benchmark.cc  convdiff_benchmark.h  convdiff_benchmark.xml  convdiff_dg.cc  convdiff_dg.h  convdiff_dg.xml  instationary_convdiff_tutorial.cc  instationary_convdiff_tutorial.h  instationary_convdiff_tutorial.xml  stabilized_convdiff_tutorial.cc  stabilized_convdiff_tutorial.h  stabilized_convdiff_tutorial.xml
examples/data/: 2d_channel_flow.inp  HiFlowFiles.cmake  L_amr.inp  L_domain2.inp  L_domain_flow.inp  Zusammenfassung.ods  amr_test_2D.inp  cavity.inp  cell_type_demo.inp  channel_2d_uniform.inp  channel_bench1.inp  channel_level_5.inp  dfg2d_rect.inp  dfg_bench2d.inp  dfg_bench3d_cyl.inp  dfg_bench3d_rect2.inp  dfg_channel_rect_prism_transfinite.inp  direct_inverse.inp  fsi_bench_2d_R0.inp  fsi_bench_2d_R1.inp  fsi_bench_2d_R2.inp  fsi_bench_2d_R3.inp  fsi_couette_r0.inp  fsi_couette_r1.inp  fsi_couette_r2.inp  fsi_couette_r3.inp  fsi_couette_r4.inp  inv_pot_mesh.inp  nozzle.inp  porous2d.inp  porous2d_barrier.inp  porous2d_channel.inp  porous3d.inp  porous3d_barrier.inp  porous3d_channel.inp  schubert_periodic.inp  stanford_bunny.inp  three_quads_L_2d.inp  unit_cube-tet.inp  unit_cube_2_cells.inp  (+11 more)
examples/direct_inverse/: HiFlowFiles.cmake  direct_inverse_tutorial.cc  direct_inverse_tutorial.h  direct_inverse_tutorial.xml
examples/distributed_control_poisson/: HiFlowFiles.cmake  Makefile  distributed_control_poisson_tutorial.cc  distributed_control_poisson_tutorial.h  distributed_control_poisson_tutorial.xml
examples/elasticity/: HiFlowFiles.cmake  elasticity.cc  elasticity.h  elasticity_Bunny_Scenario_DirBC.xml
examples/flow/: HiFlowFiles.cmake  flow_tutorial.cc  flow_tutorial.h  flow_tutorial.xml
examples/flow_dg/: HiFlowFiles.cmake  flow_tutorial_dg.cc  flow_tutorial_dg.h  flow_tutorial_dg.xml
examples/geometric_multigrid/: HiFlowFiles.cmake  geometric_multigrid.cc  geometric_multigrid.h  geometric_multigrid.xml
examples/hp_dg_elliptic/: CMakeLists.txt  HiFlowFiles.cmake  hp_dg_elliptic.cc  hp_dg_elliptic.h  hp_dg_elliptic_param.xml
examples/instationary_flow/: HiFlowFiles.cmake  chorin.cc  chorin.h  instationary_flow_benchmark.cc  instationary_flow_benchmark.h
examples/laminar_flow/: HiFlowFiles.cmake  laminar_flow_benchmark.cc  laminar_flow_benchmark.h  laminar_flow_benchmark.xml
examples/laplace/: HiFlowFiles.cmake  yalaplace.cc  yalaplace.h
examples/mesh/: HiFlowFiles.cmake  adapt_mesh_to_function_demo.cc  advanced_iteration_demo.cc  cell_type_demo.cc  custom_refine_demo.cc  ghost_cells_demo.cc  global_partitioning_demo.cc  iteration_demo.cc  local_refinements_by_attribute.cc  mesh_tools_partitioning_demo.cc  mesh_tools_reader_demo.cc  moving_mesh_demo.cc  refine_by_attribute.cc  scaling_test.cc  scaling_test.h  scaling_test.xml  shared_vertex_table_demo.cc
examples/met_flow/: HiFlowFiles.cmake  config.h.in  directory.h.in  met_flow_vars.h  metflow.h.in
examples/mixed_precision/: HiFlowFiles.cmake  mixed_precision.cc  mixed_precision.h  mixed_precision.xml
examples/newton/: HiFlowFiles.cmake  newton_tutorial.cc  newton_tutorial.h  newton_tutorial.xml
examples/poisson/: .directory  HiFlowFiles.cmake  poisson_tutorial.cc  poisson_tutorial.h  poisson_tutorial.xml
examples/poisson_adaptive/: HiFlowFiles.cmake  poisson_adaptive.cc  poisson_adaptive.h  poisson_adaptive.xml
examples/poisson_eigenvalue/: HiFlowFiles.cmake  Makefile  poisson_eigenvalue.cc  poisson_eigenvalue.h  poisson_eigenvalue.xml
examples/poisson_periodic/: HiFlowFiles.cmake  poisson_periodic.cc  poisson_periodic.h  poisson_periodic.xml
examples/poisson_precond/: HiFlowFiles.cmake  poisson_precond.cc  poisson_precond.h  poisson_precond.xml
examples/poisson_uncertainty/: HiFlowFiles.cmake  poisson_uncertainty.cc  poisson_uncertainty.h  poisson_uncertainty.xml
src/: .directory  CMakeLists.txt  config.h.in  directory.h.in  hiflow.h.in
test/: CMakeLists.txt
test-legacy/: CMakeLists.txt  attributes_test.cc  bdry_integration_test.cc  big_mesh_test.cc  binary_io_test.cc  boundary_extraction_test.cc  cell_type_test.cc  cg_old_test.cc  cg_test.cc  closest_point_test.cc  cuda_test.cc  dof_extended_identification_test.cc  dof_identification_test.cc  eval_fe_solution_test.cc  facet_integral_test.cc  facet_normal_test.cc  fe_weight_ordering_test.cc  fe_weight_test.cc  fe_weight_zero_test.cc  hdf5_test.cc  hp_assembly_test.cc  hp_assembly_test.h  incidence_iteration_test.cc  incident_vertex_iterator_test.cc  integration_test.cc  lmp_test.cc  local_refinement_boundary_test.cc  material_number_test.cc  mesh_interface_test.cc  mpi_test.cc  parallel_adaptive_jump_term_test.cc  parallel_adaptive_jump_term_test.h  parallel_vtk_reader_test.cc  point_evaluator_test2D.cc  point_evaluator_test3D.cc  quadrature_order_test.cc  reader_test.cc  refinement_test.cc  tensor_test.cc  test.h  (+8 more)
utils/: .directory  CMakeLists.txt  binaryvtu2asciivtu.py  check_mesh_input.cc  check_partitioning.cc  cpplint.py  extract_mesh_lib.pl  gprof2dot.py  hiflow3_logo.txt  info2html.pl  inp2vtu.cc  mesh2vtu.py  mesh_refiner.cc  number_cell_connections.cc  partition_mesh.cc  pvtu2vtu.py  quadrature_solin_generator.cc  readme.txt  vtu2inp.py  vtu2nas.py
(+1707 files in other folders)
